returns skoro gotovo

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -13,12 +13,12 @@
 </div>
 <div class="container mat-elevation-z8">
     <mat-table mat-table #table [dataSource]="dataSource" matSort class="mat-cell">
-        <ng-container matColumnDef="productIdCompany">
+        <!--<ng-container matColumnDef="productIdCompany">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Id
             </mat-header-cell>
             <mat-cell *matCellDef="let row" data-label="Id">{{ row.productIdCompany }}</mat-cell>
         </ng-container>
-
+-->
         <ng-container matColumnDef="productName">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Product name
             </mat-header-cell>
