--- a/src/app/components/object/object.component.html
+++ b/src/app/components/object/object.component.html
@@ -98,12 +98,18 @@
 
               <mat-icon area-label="Info">info</mat-icon>
             </button>
-            <button class="choose-btn" mat-button color="primary" *ngIf="!isAdmin" [disabled]="isObjectSelected"
+            <button class="choose-btn" mat-button color="primary" *ngIf="!isAdmin && !isReturns" [disabled]="isObjectSelected"
               (click)="getUnfinishedObjectStoreCheck(row.objectName, row.objectIdCompany)">
 
               Start
               <mat-icon area-label="Open" class="openIcon">open_in_new</mat-icon>
             </button>
+            <button class="choose-btn" mat-button color="primary" *ngIf="!isAdmin && isReturns" [disabled]="isObjectSelected"
+            (click)="returnPage(row.objectIdCompany)">
+
+            Start
+            <mat-icon area-label="Open" class="openIcon">open_in_new</mat-icon>
+          </button>
 
           </mat-cell>
         </ng-container>
