--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h3 mat-dialog-title *ngIf="flag == 1">Add return</h3>
-    <h3 mat-dialog-title *ngIf="flag == 2">Update user: {{data.returnId}}</h3>
-    <h3 mat-dialog-title *ngIf="flag == 3">Delete user: {{data.returnId}}</h3>
+    <h3 mat-dialog-title *ngIf="flag == 2">Update return</h3>
+    <h3 mat-dialog-title *ngIf="flag == 3">Delete return</h3>
 
 
 
@@ -10,39 +10,80 @@
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Product Id Company" [(ngModel)]="data.productIdCompany" name="productIdCompany"
-                    [disabled]="flag === 3" required />
+                    [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
-                <input matInput placeholder="Quantity" [(ngModel)]="data.quantity" name="quantity" [disabled]="flag === 3"
-                    type="number" required />
+                <input matInput placeholder="Quantity" [(ngModel)]="data.quantity" name="quantity" [disabled]="flag === 3 || flag===4"
+                    required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
-                <input matInput placeholder="Expiry Date" [(ngModel)]="data.expiryDate" name="expiryDate"
-                    [disabled]="flag === 3" required />
+                <input matInput placeholder="Expiry Date"  [(ngModel)]="data.expiryDate" name="expiryDate"
+                  type="date" [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Object Id Company" [(ngModel)]="data.objectIdCompany" name="objectIdCompany" type="object"
-                    [disabled]="flag === 3" required />
+                    [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Suggested Discount" [(ngModel)]="data.discount" name="discount"
-                    type="number" [disabled]="flag === 3" required />
+                   [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Comment" [(ngModel)]="data.comment" name="comment"
-                    type="number" [disabled]="flag === 3" required />
+                    [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="objectCity" [(ngModel)]="data.objectCity" name="objectCity"
+                    [disabled]="flag === 3 || flag===4" required />
+            </mat-form-field>
+        </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="objectAddress" [(ngModel)]="data.objectAddress" name="objectAddress"
+                     [disabled]="flag === 3 || flag===4" required />
+            </mat-form-field>
+        </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="objectName" [(ngModel)]="data.objectName" name="objectName"
+                    [disabled]="flag === 3 || flag===4" required />
+            </mat-form-field>
+        </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="productName" [(ngModel)]="data.productName" name="productName"
+                     [disabled]="flag === 3 || flag===4" required />
+            </mat-form-field>
+        </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="retailerName" [(ngModel)]="data.retailerName" name="retailerName"
+                     [disabled]="flag === 3 || flag===4" required />
+            </mat-form-field>
+        </div>
+        <div class="form">
+            <mat-form-field>
+                <input matInput placeholder="objectIdRetail" [(ngModel)]="data.objectIdRetail" name="objectIdRetail"
+                     [disabled]="flag === 3 || flag===4" required />
+            </mat-form-field>
+        </div>
+        
+
+
+
+
         <div mat-dialog-actions class="wrap">
             <button mat-button class="test" *ngIf="flag === 1" type="submit" (click)="add()"
                 [disabled]="!formControl.valid">Ok</button>
