--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -2,6 +2,7 @@
     <h3 mat-dialog-title *ngIf="flag == 1">Add return</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Update return</h3>
     <h3 mat-dialog-title *ngIf="flag == 3">Delete return</h3>
+    <h3 mat-dialog-title *ngIf="flag == 4">Return preview</h3>
 
 
 
@@ -89,7 +90,7 @@
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" *ngIf="flag === 2" type="submit" (click)="update()"
                 [disabled]="!formControl.valid">Ok</button>
-            <button mat-button class="test" *ngIf="flag === 3" type="submit" (click)="delete()">Delete</button>
+            <button mat-button class="test" *ngIf="flag === 3" type="submit" (click)="delete()">Sold</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
         </div>
     </form>
