--- a/src/app/components/returns/returns.component.html
+++ b/src/app/components/returns/returns.component.html
@@ -28,7 +28,7 @@
         <ng-container matColumnDef="expiryDate">
             <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Expiry Date
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="expiry Date">{{ row.expiryDate | date: 'dd.MMM.yy.' }}</mat-cell>
+            <mat-cell *matCellDef="let row" data-label="expiry Date">{{ row.expiryDate | date: 'dd-MMM-yy.' }}</mat-cell>
         </ng-container>
 
 
