--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -23,7 +23,7 @@
         <div class="form">
             <mat-form-field>
                 <input matInput placeholder="Expiry Date"  [(ngModel)]="data.expiryDate" name="expiryDate"
-                  type="date" [disabled]="flag === 3 || flag===4" required />
+                 [disabled]="flag === 3 || flag===4" required />
             </mat-form-field>
         </div>
         <div class="form">
