olovkica margin da u ravni

--- a/src/app/components/returns/returns.component.html
+++ b/src/app/components/returns/returns.component.html
@@ -45,7 +45,7 @@
                     View
                 </button>
                 <button mat-icon-button color="primary">
-                    <mat-icon area-label="Edit"
+                    <mat-icon style="margin-top: -5px;" area-label="Edit"
                         (click)="openDialog(2, row.returnId,row.retailerName, row.objectName,row.objectAddress,row.objectCity, row.objectIdCompany,row.objectIdRetail,row.productName,row.productIdCompany,row.quantity, row.expiryDate, row.comment, row.discount)">
                         edit</mat-icon>
                 </button>
