--- a/src/app/components/position/position.component.html
+++ b/src/app/components/position/position.component.html
@@ -47,9 +47,9 @@
   <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No positions</mat-toolbar>
 </div>
 <br>
-<div *ngIf="positionCheck && isAdmin">
+<!--<div *ngIf="positionCheck && isAdmin">
   <button mat-raised-button color="primary" class="exportButton" style="margin-left: 10px;" (click)="exportPositions()">Export positions</button>
-</div>
+</div>-->
 <br>
 <div *ngIf="isExporting"
 style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
