--- a/src/app/components/uploads/uploads.component.css
+++ b/src/app/components/uploads/uploads.component.css
@@ -58,6 +58,7 @@
 .warning-message{
    text-align: center;
    font-size:20px;
+   margin-top:40%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -68,4 +69,12 @@
   color: #39ace7;
   transition: 0.3s;
   border: 2px solid #39ace7;
+}
+
+.select{
+  margin-top:10%;
+}
+
+.check{
+  margin:15%;
 }
