--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -43,6 +43,20 @@
       <br>
       <mat-checkbox class="example-margin" color="primary" (change)="checkWithImages($event)">With images</mat-checkbox>
     </div>
+
+<div class="select">
+  <mat-form-field appearance="fill">
+    <mat-label>Position type</mat-label>
+    <mat-select [(ngModel)]="selectedType">
+      <mat-option>
+        All
+      </mat-option>
+      <mat-option *ngFor="let type of types" [value]="type.positionTypeName">
+        {{type.positionTypeName}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  </div>
 <div class="select">
 <mat-form-field appearance="fill">
   <mat-label>Retailer</mat-label>
