returns pretragaa proizvoda

--- a/src/app/components/returns/returns.component.html
+++ b/src/app/components/returns/returns.component.html
@@ -1,7 +1,9 @@
 <div class="header" *ngIf="showHeader">
-    <img src="assets\StoreCheckIcon3.png" alt="SC icon" width="80" height="80" style="float:left;">
+    <img src="../../../assets/Store Metrics Logo PNG.png" alt="SC icon" width="80" height="80" style="float:left;">
     <h2 style="height:80px;"> <span>Returns</span> </h2>
 </div>
+
+<div > <u>ObjectName:</u><strong>objekat ime itd ispod cepati proslediti u ruti koji objekat u pitanju</strong></div>
 
 <div class="centered font">
     <mat-form-field>
