--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h3 mat-dialog-title *ngIf="flag == 1">Add return</h3>
     <h3 mat-dialog-title *ngIf="flag == 2">Update return</h3>
-    <h3 mat-dialog-title *ngIf="flag == 3">Delete return</h3>
+    <h3 mat-dialog-title *ngIf="flag == 3">Return sold</h3>
     <h3 mat-dialog-title *ngIf="flag == 4">Return preview</h3>
 
 
@@ -53,17 +53,12 @@
         </div>
 
 
-
-
-
-
-
         <div mat-dialog-actions class="wrap">
             <button mat-button class="test" *ngIf="flag === 1" type="submit" (click)="add()"
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" *ngIf="flag === 2" type="submit" (click)="update()"
                 [disabled]="!formControl.valid">Ok</button>
-            <button mat-button class="test" *ngIf="flag === 3" type="submit" (click)="delete()">Sold</button>
+            <button mat-button class="test" *ngIf="flag === 3" type="submit" (click)="sold()">Sold</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
         </div>
     </form>
