Spinneri u svim dijalozima

--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -57,7 +57,7 @@
               <mat-option value="All">
                 All
               </mat-option>
-              <mat-option *ngFor="let option of filteredOptions | async" [value]="option.objectName">
+              <mat-option *ngFor="let option of filteredOptions | async" [value]="option.objectIdRetail">
                 {{option.objectName}}
               </mat-option>
             </mat-autocomplete>
