--- a/src/app/components/uploads/uploads.component.html
+++ b/src/app/components/uploads/uploads.component.html
@@ -90,7 +90,7 @@
       <mat-option value="All">
         All
       </mat-option>
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.objectName">
+      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.objectIdCompany">
         {{option.objectName}}
       </mat-option>
     </mat-autocomplete>
