--- a/src/app/dialogs/feedback-category-dialog/feedback-category-dialog.component.html
+++ b/src/app/dialogs/feedback-category-dialog/feedback-category-dialog.component.html
@@ -23,7 +23,11 @@
                 (click)="update()">Ok</button>
             <button class="test" mat-button type="submit" *ngIf="flag==3" (click)="delete()">Delete</button>
             <button class="test" mat-button (click)="close()">Cancel</button>
-
+            <div *ngIf="isLoading"
+            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+            </mat-progress-spinner>
+          </div>
         </div>
         <br>
         <br>
