--- a/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
+++ b/src/app/dialogs/object-create-dialog/object-create-dialog.component.html
@@ -146,6 +146,11 @@
 
   <button mat-button class="item2" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Add</button>
   <button mat-button class="item2" (click)="close()">Close</button>
+  <div *ngIf="isLoading"
+  style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+  <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+  </mat-progress-spinner>
+</div>
 </div>
   </form>
   </div>
