--- a/src/app/dialogs/objectdialog/objectdialog.component.html
+++ b/src/app/dialogs/objectdialog/objectdialog.component.html
@@ -153,7 +153,11 @@
   <button mat-button class="item2" *ngIf="flag == 3" type="submit" [mat-dialog-close]="1"(click)="delete()">Delete</button>
   <button mat-button class="item2" *ngIf="flag == 2" type="submit" [mat-dialog-close]="1"(click)="update()" [disabled]="!formControl.valid">Ok</button>
   <button mat-button class="item2" (click)="close()">Close</button>
-
+  <div *ngIf="isLoading"
+  style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+  <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+  </mat-progress-spinner>
+</div>
 </div>
   </form>
   </div>
