--- a/src/app/dialogs/product-dialog/product-dialog.component.html
+++ b/src/app/dialogs/product-dialog/product-dialog.component.html
@@ -46,6 +46,11 @@
                 [disabled]="!formControl.valid">Ok</button>
             <button mat-button class="test" *ngIf="flag === 3" type="submit" (click)="delete()">Delete</button>
             <button mat-button class="test" (click)="close()">Cancel</button>
+            <div *ngIf="isLoading"
+            style="display: flex; justify-content: center; align-items: center; background: white;color:#56baed">
+            <mat-progress-spinner class="mat-spinner-color" mode="indeterminate" [diameter]="20">
+            </mat-progress-spinner>
+          </div>
         </div>
     </form>
 </div>
