--- a/src/app/dialogs/returndialog/returndialog.component.html
+++ b/src/app/dialogs/returndialog/returndialog.component.html
@@ -8,7 +8,7 @@
 
     <form class="mat-dialog-content" #formControl="ngForm">
 
-        <div *ngIf="flag!=1" class="form">
+        <div *ngIf="flag !== 1 && flag !== 2" class="form">
             <mat-form-field>
                 <input matInput placeholder="Product Id Company" [(ngModel)]="data.productIdCompany"
                     name="productIdCompany" [disabled]="flag === 3 || flag===4" required />
