--- a/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.css
+++ b/src/app/dialogs/store-check-receiver-dialog/store-check-receiver-dialog.component.css
@@ -46,3 +46,7 @@ button[disabled]:hover {
 .mat-button {
   border-radius: 10px !important;
 }
+
+.mat-spinner-color::ng-deep circle {
+    stroke: #56baed !important;
+  }
