--- a/src/app/dialogs/are-you-sure-dialog/are-you-sure-dialog.component.css
+++ b/src/app/dialogs/are-you-sure-dialog/are-you-sure-dialog.component.css
@@ -51,3 +51,7 @@ button {
 .mat-button {
   border-radius: 10px !important;
 }
+
+.mat-spinner-color::ng-deep circle {
+    stroke: #56baed !important;
+  }
