--- a/src/app/dialogs/object-create-dialog/object-create-dialog.component.css
+++ b/src/app/dialogs/object-create-dialog/object-create-dialog.component.css
@@ -35,3 +35,7 @@ button[disabled]:hover {
 .mat-button {
   border-radius: 10px !important;
 }
+
+.mat-spinner-color::ng-deep circle {
+  stroke: #56baed !important;
+}
