--- a/src/app/dialogs/unfinished-object-store-check-dialog/unfinished-object-store-check-dialog.component.css
+++ b/src/app/dialogs/unfinished-object-store-check-dialog/unfinished-object-store-check-dialog.component.css
@@ -44,3 +44,7 @@ button {
 .mat-button {
   border-radius: 10px !important;
 }
+
+.mat-spinner-color::ng-deep circle {
+    stroke: #56baed !important;
+  }
