--- a/src/app/components/returns/returns.component.html
+++ b/src/app/components/returns/returns.component.html
@@ -72,9 +72,9 @@
         </mat-progress-spinner>
     </div>
     <mat-toolbar color="primary" *ngIf="noData" class="noDataMessage">No returns</mat-toolbar>
-    <!-- <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count" [pageSizeOptions]="[2, 5, 10, 25, 100]"
+    <mat-paginator *ngIf="dataSource" [pageIndex]="page-1" [pageSize]="count" [pageSizeOptions]="[2, 5, 10, 25, 100]"
         [length]="length" (page)="loadDataOnPageEvent($event)">
-    </mat-paginator> -->
+    </mat-paginator>
 </div>
 
 <button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit</button>
