--- a/src/app/components/choose-object/choose-object.component.html
+++ b/src/app/components/choose-object/choose-object.component.html
@@ -76,6 +76,15 @@
             </mat-select>
           </mat-form-field>
           </div>
+          <div *ngIf="isReturns && isExport">
+          <mat-form-field appearance="fill" >
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate" name="date">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        </div>
           <p *ngIf="error">Can't filter object and retailer at the same time.</p>
           <button mat-stroked-button color="primary" class="item2" (click)="exportReturns()"
                 *ngIf="isReturns && isExport">Ok</button>
