Dodate ikonice za sve exit button-e

--- a/src/app/components/resolved-feedback/resolved-feedback.component.html
+++ b/src/app/components/resolved-feedback/resolved-feedback.component.html
@@ -50,6 +50,6 @@
     <mat-paginator [length]="length" [pageSize]="count" (page)="loadDataOnPageEvent($event)"></mat-paginator>
   </div>
   <div class="fadeIn third">
-    <button mat-stroked-button color="primary" class="mat-btn " (click)="exit()">Exit</button>
+    <button mat-stroked-button color="primary" class="mat-btn " (click)="exit()">Exit <mat-icon>exit_to_app</mat-icon></button>
   </div>
 </div>
