--- a/src/app/components/returns/returns.component.html
+++ b/src/app/components/returns/returns.component.html
@@ -77,4 +77,4 @@
     </mat-paginator>
 </div>
 
-<button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit</button>
+<button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit <mat-icon>exit_to_app</mat-icon></button>
