--- a/src/app/components/store-check-page/store-check-page.component.html
+++ b/src/app/components/store-check-page/store-check-page.component.html
@@ -118,7 +118,7 @@
               </div>
               <br>
             <button mat-stroked-button color="primary" class="item2" style="margin-bottom: 10px; margin-left:10px;"
-                (click)="exit()">Exit</button>
+                (click)="exit()">Exit <mat-icon>exit_to_app</mat-icon></button>
         </div>
 
     </div>
