--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -102,4 +102,4 @@
     </mat-paginator> -->
 </div>
 
-<button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit</button>
+<button mat-stroked-button color="primary" class="item2" (click)="exit()">Exit <mat-icon>exit_to_app</mat-icon></button>
